increased password length limit to 64 and added a copy to clipboard button for the recently generated passwords

--- a/index.css
+++ b/index.css
@@ -17,4 +17,7 @@
         #liveAlertPlaceholder {
             margin-bottom: 15px;
         }
+        #liveAlertPlaceholderPopup {
+            margin-bottom: 15px;
+        }
    
